# LaserImageCopy

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.json  copier.cppm  detector.cppm  logger.cppm  main.cpp  threadpool.cppm  translate.cppm
